--- a/pages/cart.html
+++ b/pages/cart.html
@@ -14,7 +14,7 @@
             <a href="#sign" class="header-link">đăng nhập</a>
           </li>
           <li class="nav-item col">
-            <a class="header-link" href="#">trang của tôi</a>
+            <a class="header-link" href="#sold">trang của tôi</a>
           </li>
           <li class="nav-item col">
             <a href="#cart" class="header-link">giỏ hàng</a>
@@ -55,8 +55,6 @@
             <div class="row" style="width: fit-content;">
               {{listProducts[item.idpro].name}}
             </div>
-            <!-- <div class="row" style="width: fit-content;">asdasd</div>
-          <div class="row" style="width: fit-content;">werwer</div> -->
           </div>
         </div>
         <div class="row text-center">
