--- a/pages/home.html
+++ b/pages/home.html
@@ -11,12 +11,15 @@
       <div class="col-4"></div>
       <div class="collapse navbar-collapse col-3 navbar-end" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 row">
-          <li class="nav-item col-4">
-            <a href="#sign" class="header-link" ng-hide="thisAccount">đăng nhập</a>
-            <a href="#sign" class="header-link">xin chào: {{thisAccount}}</a>
+          <li class="nav-item col-4" ng-switch="user">
+            <a href="#sign" class="header-link" ngSwitchCase="undefine" ng-hide="user">đăng nhập</a>
+            <div ngSwitchDefault>
+              <a class="header-link">xin chào:</a>
+              <a href="#sign" class="header-link" ng-bind="user"></a>
+            </div>
           </li>
           <li class="nav-item col-4">
-            <a  class="header-link" href="#">trang của tôi</a>
+            <a class="header-link" href="#sold">trang của tôi</a>
           </li>
           <li class="nav-item col-4">
             <a href="#cart" class="header-link">giỏ hàng</a>
@@ -47,7 +50,7 @@
   </div>
   <div class="row mt-5" style="display: flex;justify-content: space-between">
     <a class="card py-1 px-5" style="width: 24rem;border: 0;text-decoration: none; color: black;"
-      ng-repeat="pro in listproducts" href="#detailproduct">
+      ng-repeat="pro in listproducts" ng-click="handleClick($event,pro.id)">
       <img ng-src={{pro.img}} alt="...">
       <div class="card-body text-center">
         <h5 class="card-title">{{pro.name}}</h5>
