--- a/pages/addcategory.html
+++ b/pages/addcategory.html
@@ -8,11 +8,11 @@
                 <h3>admin</h3>
             </div>
             <div class="row mt-5">
-                <h3>product</h3>
-            </div>
-            <div class="row mt-5">
-                <h3>category</h3>
-            </div>
+                <a href="#addproduct" style="text-decoration: none; color: black;font-size: 2em;">product</a>
+              </div>
+              <div class="row mt-5">
+                <a href="#addcategory" style="text-decoration: none; color: black;font-size: 2em;">category</a>
+              </div>
         </div>
         <div class="col-8 offset-1">
             <form>
